2305.	[security]	inet_network() buffer overflow. CVE-2008-0122.

2304.	[bug]		Check returns from all dns_rdata_tostruct() calls.
			[RT #17460]

2303.	[bug]		Remove unnecessary code from bin/named/lwdgnba.c.
			[RT #17471]

2302.	[bug]		Fix memset() calls in lib/tests/t_api.c. [RT #17472]

2301.	[bug]		Remove resource leak and fix error messages in
			bin/tests/system/lwresd/lwtest.c. [RT #17474]

2300.	[bug]		Fixed failure to close open file in 
			bin/tests/names/t_names.c. [RT #17473]

2299.	[bug]		Remove unnecessary NULL check in
			bin/nsupdate/nsupdate.c. [RT #17475]

2298.	[bug]		isc_mutex_lock() failure not caught in
			bin/tests/timers/t_timers.c. [RT #17468]

2297.	[bug]		isc_entropy_createfilesource() failure not caught in
			bin/tests/dst/t_dst.c. [RT #17467]

2296.	[port]		Allow docbook stylesheet location to be specified to
			configure. [RT #17457]

2295.	[bug]		Silence static overrun error in bin/named/lwaddr.c.
			[RT #17459]

2294.	[placeholder]	rt17435

2293.	[func]		Add ACL regression test. [RT #17375]

2292.	[bug]		Log if the working directory is not writable.
			[RT #17312]

2291.   [bug]           PR_SET_DUMPABLE may be set too late.  Also report
			failure to set PR_SET_DUMPABLE. [RT #17312]

2290.	[bug]		Let AD in the query signal that the client wants AD
			set in the response. [RT #17301]

2289.	[func]		named-checkzone now reports the out-of-zone CNAME
			found. [RT #17309]

2288.	[port]		win32: mark service as running when we have finished
			loading.  [RT #17441]

2287.	[bug]		Use 'volatile' if the compiler supports it. [RT #17413]

2286.	[func]		Allow a TCP connection to be used as a weak
			authentication method for reverse zones.
			New update-policy methods tcp-self and 6to4-self.
			[RT #17378]

2285.	[func]		Test framework for client memory context management.
			[RT #17377]

2284.	[bug]		Memory leak in UPDATE prerequisite processing.
			[RT #17377]

2283.	[bug]		TSIG keys were not attaching to the memory