@@ -1,3 +1,6 @@
+2306.	[bug]		Remove potential race from lib/dns/resolver.c.
+			[RT #17470]
+
 2305.	[security]	inet_network() buffer overflow. CVE-2008-0122.
 
 2304.	[bug]		Check returns from all dns_rdata_tostruct() calls.
